# kerosene

./: .gitignore  License.md  README.md  engine.json  engine.sln
engine/: CMakeLists.txt  ReadMe.md  engine.vcxproj  engine.vcxproj.filters  kerosene.srctrlprj
engine/libs/windows32/: zlib.lib
engine/libs/windows64/: glew.h  libpng16.lib  zlib.lib
engine/res/shaders/: default_diffuse.shd  default_texture.shd
engine/res/textures/: dummy0.psd  healthmana.psd  palette.psd  planks_demo.psd  player.psd  styleguide.psd  ui.psd  workinprogress.psd  workinprogress0.psd
engine/res/textures/dev/: test_char.psd
engine/source/: _global.h  _mathdefs.h  _renderdefs.h  _renderutils.cpp  batch.cpp  batch.h  decimal32.cpp  defaultrenderengine.cpp  defaultrenderengine.h  disabledinputengine.cpp  disabledlogicengine.cpp  disabledphysicsengine.cpp  disabledphysicsengine.h  dynamicbuffer.h  engine.cpp  engine.h  engineconfiguration.h  engineexception.cpp  engineexception.h  gameidea.txt  gamestate.cpp  gamestate.h  glwindow.cpp  glwindow.h  logger.cpp  logger.h  material.cpp  material.h  matrix4f.cpp  matrix4f.h  quaterion4f.cpp  quaterion4f.h  resourcemanager.cpp  shader.cpp  shader.h  shaderbuilder.cpp  shaderbuilder.h  staticmesh.h  texture.cpp  vector2f.cpp  (+14 more)
engine/source/engine/: _gamedef.h  _gl.cpp  _gl.h  _global.h  _mathdefs.h  _meta.cpp  _meta.h  _renderdefs.h  _renderutils.cpp  _stdext.h  arraybuffer.h  arraybuffertoken.cpp  arraybuffertoken.h  attribvertexarray.h  attribvertexbuffer.cpp  attribvertexbuffer.h  batch.h  buffer.h  bufferrange.cpp  bufferrange.h  buffertoken.cpp  buffertoken.h  buffertoken2.cpp  camera.cpp  camera.h  camera2d.cpp  camera2d.h  camera3d.cpp  camera3d.h  charevent.h  cmd.cpp  cmd.h  compact_map.h  component.cpp  component.h  controllable.cpp  controllable.h  controllablesystem.cpp  controllablesystem.h  controller.h  (+209 more)
engine/source/sandbox/: main.cpp  testgamestate.cpp  testgamestate.h  testrendercomponent.cpp  testrendercomponent.h  testrenderer.cpp  testrenderer.h
engine/static-libs/lpng1623/projects/vstudio/: vstudio.sln
engine/static-libs/lpng1623/projects/vstudio/Release Library/: libpng16.lib  pngstest.bsc  pngtest.bsc  pngunknown.bsc  zlib.bsc
engine/static-libs/lpng1623/projects/vstudio/libpng/Release Library/libpng.tlog/: BscMake.command.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  lib.command.1.tlog
engine/static-libs/lpng1623/projects/vstudio/pngstest/Release Library/pngstest.tlog/: BscMake.command.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pngstest.write.1u.tlog
engine/static-libs/lpng1623/projects/vstudio/pngtest/Release Library/pngtest.tlog/: CL.command.1.tlog  (+9 more)
(+65 files in other folders)
